Adds a new ab test
- test new wording for question one of the checker

--- a/app/views/brexit_checker/show.html.erb
+++ b/app/views/brexit_checker/show.html.erb
@@ -2,6 +2,7 @@
 <% content_for :head do %>
   <meta name="robots" content="noindex">
   <%= account_variant.analytics_meta_tag.html_safe %>
+  <%= brexit_question_variant.analytics_meta_tag.html_safe %>
 <% end %>
 
 <%
