--- a/app/views/brexit_checker/results.html.erb
+++ b/app/views/brexit_checker/results.html.erb
@@ -16,7 +16,7 @@
   <meta property="og:description" content="<%= t('brexit_checker.results.social_media_meta.description') %>">
   <meta name="twitter:card" content="summary">
   <link rel="canonical" href="<%= page_url %>">
-  <%= ab_test_variant.analytics_meta_tag.html_safe %>
+  <%= brexit_urgency_variant.analytics_meta_tag.html_safe %>
   <%= account_variant.analytics_meta_tag.html_safe %>
 <% end %>
 
