--- a/app/views/components/_date-filter.html.erb
+++ b/app/views/components/_date-filter.html.erb
@@ -8,9 +8,7 @@
   date_errors_to ||= nil
 %>
 <% if key && name %>
-  <%= render "components/expander", {
-      title: "Date"
-    } do %>
+  <%= render "components/expander", { title: name } do %>
     <div class="app-c-date-filter govuk-!-margin-bottom-0" id="<%= key %>" <% if aria_controls_id %> data-module="enable-aria-controls"<% end %>>
       <%= render "govuk_publishing_components/components/input", {
         label: {
@@ -23,7 +21,7 @@
         hint: "For example, 2005 or 21/11/2014",
         error_message: date_errors_from
       } %>
-  
+
       <%= render "govuk_publishing_components/components/input", {
         label: {
           text: name + " before"
