--- a/app/views/brexit_checker/_share_links.html.erb
+++ b/app/views/brexit_checker/_share_links.html.erb
@@ -1,7 +1,4 @@
 <section class="brexit-checker__share">
-  <% hidden_text = capture do %>
-    <span class="govuk-visually-hidden">Share on</span>
-  <% end %>
   <h2 class="govuk-heading-m">
     <%= I18n.t("brexit_checker.results.share_link_title") %>
   </h2>
@@ -10,27 +7,27 @@
     links: [
       {
         href: "https://www.facebook.com/sharer/sharer.php?u=#{encoded_results_url}",
-        text: hidden_text + "Facebook",
+        text: "Facebook",
         icon: "facebook"
       },
       {
         href: "https://twitter.com/share?url=#{encoded_results_url}",
-        text: hidden_text + "Twitter",
+        text: "Twitter",
         icon: "twitter"
       },
       {
         href: "https://api.whatsapp.com/send?text=#{encoded_results_url}",
-        text: hidden_text + "WhatsApp",
+        text: "WhatsApp",
         icon: "whatsapp"
       },
       {
         href: "mailto:?body=#{encoded_results_url}&subject=#{I18n.t("brexit_checker.results.title")}",
-        text: hidden_text + "Email",
+        text: "Email",
         icon: "email"
       },
       {
         href: "http://www.linkedin.com/shareArticle?url=#{encoded_results_url}",
-        text: hidden_text + "LinkedIn",
+        text: "LinkedIn",
         icon: "linkedin"
       },
     ]
