Add data-modules attribute to form
Previously we were using Jquery selection based on ID of the form, now
we're using standard module code from the components, it expects to
select on the basis of a `data-module` attribute.

So we add this here to enable our code to hook onto the form

--- a/app/views/brexit_checker/save_results.html.erb
+++ b/app/views/brexit_checker/save_results.html.erb
@@ -66,7 +66,7 @@
           <% end %>
         </ul>
 
-        <%= form_tag Services.accounts_api, id: "account-signup" do %>
+        <%= form_tag Services.accounts_api, id: "account-signup", data: { "module": "attach-cross-domain-tracker-to-input" } do %>
           <input type="hidden" name="jwt" value="<%= @account_jwt %>">
           <%= render "govuk_publishing_components/components/button", {
             text: t('brexit_checker.account_signup.cta_button'),
