Fix for select element while zoomed
Text in select box cut off while viewing at 200% text-only on Firefox.

--- a/app/views/finders/_sort_options.html.erb
+++ b/app/views/finders/_sort_options.html.erb
@@ -1,5 +1,5 @@
 <% if local_assigns[:options] %>
-  <div class="govuk-form-group sort-options">
+  <div class="govuk-form-group sort-options gem-c-select">
     <label for="order" class="sort-options__label govuk-label">Sort by</label>
     <select
       class="js-order-results govuk-select sort-options__select"
