Reauthenticate, but don't log out, on 403
If the user gets a 403 response, then they are logged in but not at a
high enough level of authentication.  The straightforward way to
handle this would be to treat it the same as a 401: end the user's
session and redirect them to log in.

But that's not a great user experience.  If they decide they don't
want to set up MFA, and come back, they're no longer able to see their
saved pages any more, because they've been logged out.  Better to keep
the user's session intact, but to put them in a "must_reauthenticate?"
bucket.

"must_reauthenticate?" is essentially the same as "!logged_in?" but
doesn't require actually ending the session.  This is probably a
pattern we'll find useful in other frontend apps.

--- a/app/views/brexit_checker/results.html.erb
+++ b/app/views/brexit_checker/results.html.erb
@@ -56,19 +56,7 @@
   </div>
 
   <% if criteria_keys.present? %>
-    <% if logged_in? %>
-      <% if @results_differ %>
-        <%= render 'govuk_publishing_components/components/notice', {
-          title: t('brexit_checker.results.accounts.results_differ.message'),
-          description: sanitize(t('brexit_checker.results.accounts.results_differ.description', link: transition_checker_save_results_confirm_path(c: criteria_keys)))
-        } %>
-      <% elsif @results_saved %>
-        <%= render 'govuk_publishing_components/components/success_alert', {
-          message: t('brexit_checker.results.accounts.results_saved.message'),
-          description: t('brexit_checker.results.accounts.results_saved.description')
-        } %>
-      <% end %>
-    <% else %>
+    <% if must_reauthenticate? %>
       <%= render 'components/email_link', {
         data_attributes: {
           "module": "gem-track-click",
@@ -80,13 +68,25 @@
         link_href: transition_checker_save_results_path(c: criteria_keys),
         link_title: t("brexit_checker.results.email_sign_up_title"),
       } %>
+    <% else %>
+      <% if @results_differ %>
+        <%= render 'govuk_publishing_components/components/notice', {
+          title: t('brexit_checker.results.accounts.results_differ.message'),
+          description: sanitize(t('brexit_checker.results.accounts.results_differ.description', link: transition_checker_save_results_confirm_path(c: criteria_keys)))
+        } %>
+      <% elsif @results_saved %>
+        <%= render 'govuk_publishing_components/components/success_alert', {
+          message: t('brexit_checker.results.accounts.results_saved.message'),
+          description: t('brexit_checker.results.accounts.results_saved.description')
+        } %>
+      <% end %>
     <% end %>
 
     <%= render 'results_business_actions', business_results: @presenter.business_results if @presenter.business_results.any? %>
     <%= render 'results_citizen_actions', citizen_results_groups: @presenter.citizen_results_groups if @presenter.citizen_results_groups.any? %>
     <%= render 'results_with_no_actions', criteria: @presenter.criteria if (@presenter.business_results.empty? && @presenter.citizen_results_groups.empty?) %>
 
-    <% if logged_in? %>
+    <% if !must_reauthenticate? %>
       <% if @results_differ %>
         <%= render 'govuk_publishing_components/components/notice', {
           title: t('brexit_checker.results.accounts.results_differ.message'),
