--- a/app/assets/stylesheets/components/_mobile-filters.scss
+++ b/app/assets/stylesheets/components/_mobile-filters.scss
@@ -72,19 +72,12 @@
     }
 
     .facets__content {
-      padding: govuk-spacing(2) govuk-spacing(3) 90px govuk-spacing(3);
+      padding: govuk-spacing(2) govuk-spacing(3) 0;
     }
 
     .facets__footer {
       display: block;
-      position: fixed;
-      left: 0;
-      right: 0;
-      bottom: 0;
-      background-color: govuk-colour("white");
-      padding: govuk_spacing(3);
-      border-top: 1px solid $govuk-border-colour;
-      box-shadow: 0 0 5px rgba($govuk-border-colour, .8);
+      margin: govuk_spacing(3);
     }
 
     .facets__return-link {
