Update controllers and views for Explore AB Test
Enables fetching the Explore Super Menu Header from Static/Slimmer for users in the B variant of the AB Test.

--- a/app/views/layouts/finder_layout.html.erb
+++ b/app/views/layouts/finder_layout.html.erb
@@ -12,6 +12,7 @@
       <meta name="robots" content="noindex">
     <% end %>
     <meta name="govuk:base_title" content="<%= yield :meta_title %> - GOV.UK">
+    <%= explore_menu_variant.analytics_meta_tag.html_safe if explore_menu_testable? %>
   </head>
 
   <body class="<%= yield :body_classes %>">
