Fix duplicated banner on transition results page.
There is an edge case on the transition results page, where if the user
must not reauthenticate, and their results differ from the ones already
stored in their account, the "These results are different from the ones
stored in your account" message appears twice.

This removes the duplicated one, so that the message will only appear
once in those specific conditions.

--- a/app/views/brexit_checker/results.html.erb
+++ b/app/views/brexit_checker/results.html.erb
@@ -86,17 +86,8 @@
     <%= render 'results_citizen_actions', citizen_results_groups: @presenter.citizen_results_groups if @presenter.citizen_results_groups.any? %>
     <%= render 'results_with_no_actions', criteria: @presenter.criteria if (@presenter.business_results.empty? && @presenter.citizen_results_groups.empty?) %>
 
-    <% if !must_reauthenticate? %>
-      <% if @results_differ %>
-        <%= render 'govuk_publishing_components/components/notice', {
-          title: t('brexit_checker.results.accounts.results_differ.message'),
-          description: sanitize(t('brexit_checker.results.accounts.results_differ.description', link: transition_checker_save_results_confirm_path(c: criteria_keys)))
-        } %>
-      <% end %>
-    <% else %>
-      <%= render 'stay_updated' %>
-    <% end %>
 
+    <%= render 'stay_updated' if must_reauthenticate? %>
     <%= render 'share_links' %>
     <%= render 'print_link' if @presenter.business_results.any? || @presenter.citizen_results_groups.any? %>
   <% end %>
