Return A/B response headers for all variants
The `Vary` header is only be returned for the "B" variant which makes it
tricky for Fastly to know how to cache the pages correctly. This has
been updated to always pass the `Vary` header back to Fastly regardless
of the variant.

Tests have been updated to check that this is working correctly, with
checks for the Vary header, the meta tag and the correct Slimmer
template header.

--- a/app/views/layouts/search_layout.html.erb
+++ b/app/views/layouts/search_layout.html.erb
@@ -6,7 +6,7 @@
     <%= stylesheet_link_tag "application", integrity: false %>
     <%= stylesheet_link_tag "print", media: "print" %>
     <%= javascript_include_tag 'application', integrity: false %>
-    <%= explore_menu_variant.analytics_meta_tag.html_safe if explore_menu_testable? %>
+    <%= explore_menu_variant.analytics_meta_tag.html_safe %>
     <% if @content_item %>
       <%= render 'govuk_publishing_components/components/meta_tags', content_item: @content_item %>
     <% end %>
