--- a/app/views/search/no_search_term.html.erb
+++ b/app/views/search/no_search_term.html.erb
@@ -3,7 +3,7 @@
 <% content_for :extra_headers do %>
   <meta name="description"
         content="Search GOV.UK." />
-  <%= explore_menu_variant.analytics_meta_tag.html_safe if explore_menu_testable? %>
+  <%= explore_menu_variant.analytics_meta_tag.html_safe %>
 <% end %>
 
 <main id="content" class="search-wrapper search-wrapper--no-search-term">
