--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -39,6 +39,7 @@ $govuk-new-link-styles: true;
 @import 'govuk_publishing_components/components/success-alert';
 @import 'govuk_publishing_components/components/table';
 @import 'govuk_publishing_components/components/title';
+@import 'govuk_publishing_components/components/warning-text';
 
 @import 'components/*';
 @import 'finder_frontend';
