--- a/app/views/brexit_checker/save_results.html.erb
+++ b/app/views/brexit_checker/save_results.html.erb
@@ -65,14 +65,9 @@
           <p class="govuk-body"><%= t('brexit_checker.account_signup.create_account.aside') %></p>
         <% end %>
 
-        <p class="govuk-body"><%= t('brexit_checker.account_signup.create_account.outro') %></p>
-
-        <%= form_tag transition_checker_save_results_sign_up_path(c: criteria_keys), method: :post, id: "account-signup", :"data-module" => "explicit-cross-domain-links" do %>
-          <%= render "govuk_publishing_components/components/button", {
-            text: t('brexit_checker.account_signup.create_account.cta_button'),
-            margin_bottom: true,
-          } %>
-        <% end %>
+        <%= render "govuk_publishing_components/components/warning_text", {
+          text: t('brexit_checker.account_signup.create_account.migration_warning')
+        } %>
 
         <p class="govuk-body">
           <%= t('brexit_checker.account_signup.or') %>
