Update how users see a change in return results (search filter)

--- a/app/assets/stylesheets/components/_mobile-filters.scss
+++ b/app/assets/stylesheets/components/_mobile-filters.scss
@@ -84,7 +84,7 @@
       text-decoration: none;
       @supports (display: grid) {
         justify-self: end;
-        align-self: center;
+        align-self: start;
       }
     }
 
