Add notice to indicate closure of the checker
This will be displayed on all question pages and the results page. This
is a bit invasive, but it's important to flag, because people will have
to think about their options if they want to keep getting Brexit emails.

--- a/app/views/brexit_checker/results.html.erb
+++ b/app/views/brexit_checker/results.html.erb
@@ -39,6 +39,8 @@
 <div class="govuk-width-container brexit-checker-results-page">
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
+      <%= render partial: "retirement_callout" %>
+
       <%= render "govuk_publishing_components/components/title", {
         title: action_based_title
       } %>
