--- a/app/views/brexit_checker/show.html.erb
+++ b/app/views/brexit_checker/show.html.erb
@@ -35,6 +35,8 @@
 <div class="govuk-width-container">
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
+      <%= render partial: "retirement_callout" %>
+
       <form
         action="<%= transition_checker_questions_path %>"
         method="get"
