Remove height from mobile
- Remove dynamic height that is added to ".js-options-container " on mobile.

- Adjust CSS to only apply to desktop, remove from mobile.

- When the accordion is expanded in mobile view, a user will need to scroll in order to reveal all the filter options. Not a great user experience for users on mobile devices. Especially if all filters are expanded. Currently, the user needs to be certain where to land their finger when scrolling in the filter page

--- a/app/assets/stylesheets/components/_option-select.scss
+++ b/app/assets/stylesheets/components/_option-select.scss
@@ -84,8 +84,6 @@
 
 .app-c-option-select__container {
   position: relative;
-  max-height: 200px;
-  overflow-y: auto;
   overflow-x: hidden;
   background-color: govuk-colour("white");
 
@@ -129,7 +127,9 @@
   }
 
   .app-c-option-select__container {
-    height: 200px;
+    @include govuk-media-query($from: tablet) {
+      height: 200px;
+    }
   }
 
   [data-closed-on-load="true"] .app-c-option-select__container {
