--- a/app/views/layouts/finder_layout.html.erb
+++ b/app/views/layouts/finder_layout.html.erb
@@ -5,6 +5,7 @@
     <title><%= yield :title %> - GOV.UK</title>
     <%= stylesheet_link_tag "application", integrity: false %>
     <%= stylesheet_link_tag "print", media: "print" %>
+    <%= javascript_include_tag 'test-dependencies.js' if Rails.env.test? %>
     <%= javascript_include_tag 'application', integrity: false %>
     <%= csrf_meta_tags %>
     <%= yield :head %>
