--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -3,6 +3,11 @@ $govuk-use-legacy-palette: false;
 $govuk-new-link-styles: true;
 $govuk-use-legacy-font: false;
 
+// This flag stops the font from being included in this application's
+// stylesheet - the font is being served by Static across all of GOV.UK, so is
+// not needed here.
+$govuk-include-default-font-face: false;
+
 @import "reset";
 
 // see /component-guide for sass imports and
