Fix gem-track-click events on search results
- tracking worked after first page load, but not after search parameters were changed
- happened because tracking was initialised on elements within the dynamic part of the page, so when updated, those elements no longer existed, so no tracking
- solution is to move the gem-track-click module init higher in the DOM, to an element that doesn't get removed and recreated on search parameter change
- elements are still updated, but element that has the gem-track-click event listener attached persists, so tracking still works

--- a/app/views/finders/_search_results.html.erb
+++ b/app/views/finders/_search_results.html.erb
@@ -2,7 +2,7 @@
   <meta name="govuk:search-result-count" content="<%= result_set_presenter.total_count %>">
 <% end %>
 
-<div class="finder-results js-finder-results" data-module="gem-track-click">
+<div class="finder-results js-finder-results">
   <%= render "govuk_publishing_components/components/document_list", {
     items: local_assigns[:document_list_component_data],
     remove_underline: true
