--- a/app/views/finders/_filter_button.html.erb
+++ b/app/views/finders/_filter_button.html.erb
@@ -1,7 +1,9 @@
 <button class="app-c-button-as-link app-mobile-filters-link js-show-mobile-filters"
-  data-toggle="mobile-filters-modal" data-target="facet-wrapper"
-  data-module="gem-track-click" data-track-category="filterClicked"
-  data-track-action="mobile-filter-button" data-track-label="">
-  Filter <span class="govuk-visually-hidden"> results</span>
-  <span class="js-selected-filter-count"><%= sanitize facet_tags.display_total_selected_filters %></span>
+  data-toggle="mobile-filters-modal"
+  data-target="facet-wrapper"
+  data-track-category="filterClicked"
+  data-track-action="mobile-filter-button"
+  data-track-label="">
+    Filter <span class="govuk-visually-hidden"> results</span>
+    <span class="js-selected-filter-count"><%= sanitize facet_tags.display_total_selected_filters %></span>
 </button>
