--- a/app/views/finders/show.html.erb
+++ b/app/views/finders/show.html.erb
@@ -100,7 +100,7 @@
           <%= render "search_results", result_set_presenter.search_results_content %>
         </div>
 
-        <div id="js-pagination" data-module="gem-track-click">
+        <div id="js-pagination">
           <%= render "govuk_publishing_components/components/previous_and_next_navigation", @pagination.next_and_prev_links %>
         </div>
 
