Add enhanced ecommerce tracking

--- a/app/views/finders/show.html.erb
+++ b/app/views/finders/show.html.erb
@@ -44,6 +44,7 @@
         role="region"
         aria-label="<%= content_item.title %> search results"
         data-analytics-ecommerce
+        data-ga4-ecommerce
         data-ecommerce-start-index="<%= result_set_presenter.start_offset %>"
         data-list-title="<%= content_item.title %>"
         data-search-query="<%= result_set_presenter.user_supplied_keywords %>"
